@@ -8,6 +8,8 @@
     friend And<Derived>;
     friend  Or<Derived>;
     friend Xor<Derived>;
+    friend Insert<Derived>;
+    friend Extract<Derived>;
 
     friend Derived operator*<Derived>(Derived const &lhs, Derived const &rhs);
     friend Derived operator*<Derived>(Derived &&lhs, Derived const &rhs);
@@ -39,6 +41,9 @@
     friend Derived operator^<Derived>(Derived const &lhs, Derived const &rhs);
     friend Derived operator^<Derived>(Derived &&lhs, Derived const &rhs);
 
+    friend std::istream &operator>><Derived>(std::istream &in, Derived &rhs);
+    friend std::ostream &operator<<<Derived>(std::ostream &out, 
+                                                        Derived const &rhs);
 
 
 
