@@ -36,10 +36,10 @@ Derived operator*(Derived &&lhs, Derived const &rhs)
     return std::move(lhs);
 }
 
-template <class Binops, class Derived, int ...ops>
-class BinopsBase0<Binops, Derived, '*', ops...>
+template <class Derived, int ...ops>
+class BinopsBase0<Derived, '*', ops...>
 :
-    public BinopsBase0<Binops, Derived, ops...>,
+    public BinopsBase0<Derived, ops...>,
     public Mul<Derived>
 {};
 
