@@ -1,3 +1,14 @@
+bobcat (4.06.01)
+
+  * The class BinopsBase was simplified. Operator-specifications must now be
+    provided to make the requested overloaded operators available. 
+
+  * The class BinopsBase now also accepts operator specifications 'i'
+    (implementing the insertion operator) and 'e' (implementing the extraction
+    operator.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 31 Jan 2017 19:53:19 +0100
+
 bobcat (4.06.00)
 
   * The support classes Mul, Div, Mod, ..., Xor, used by BinopsBase declared a
